--- a/src/Components/UpdateClientProfile.css
+++ b/src/Components/UpdateClientProfile.css
@@ -1,7 +1,8 @@
 .fieldSet {
   display: flex;
   justify-content: space-between;
-  margin: 20px;
+  margin: 10px;
+  align-items: center;
 }
 
 .fieldSet label {
@@ -12,12 +13,46 @@
   width: 60%;
 }
 
+.field {
+  border: none;
+  border-bottom: 2px lightgray solid;
+  padding: 5px;
+  transition: 0.5s;
+}
+
 .unlock__field {
-  padding: 1px;
-  box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.75);
-  border: 1px solid rgba(10, 10, 200, 1);
+  padding: 5px;
+  box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.2);
+  border: none;
+  border-bottom: 2px solid rgba(10, 10, 200, 1);
+  transition: 0.5s;
 }
 
 .unlock__iconField {
   color: rgba(10, 10, 200, 1);
+}
+
+.update__button {
+  border: none;
+  background: rgb(0, 23, 105);
+  background: linear-gradient(
+    90deg,
+    rgba(0, 23, 105, 1) 0%,
+    rgba(0, 17, 78, 1) 52%,
+    rgba(0, 23, 105, 1) 100%
+  );
+  cursor: pointer;
+  border-radius: 3px;
+  padding: 10px;
+  width: 200px;
+  font-weight: bold;
+  color: white;
+  margin-left: 25px;
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+}
+
+.update__button:hover {
+  transform: scale(1.15);
+  box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.2);
 }
