--- a/src/Components/Solicitudes.css
+++ b/src/Components/Solicitudes.css
@@ -74,6 +74,9 @@
   float: right;
   width: 45%;
 }
+.input-container select{
+  height: 2rem;
+}
 .error-input-container{
   color: red;
   float: right;
@@ -106,10 +109,6 @@ progress{
   width: 100%;
   height: 20vh;
   box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
-}
-
-select{
-  height: 2rem;
 }
 .custom-file-upload {
   border: 1px solid #ccc;
