--- a/src/Components/Results.css
+++ b/src/Components/Results.css
@@ -1,7 +1,25 @@
 .solicitude {
   border-bottom: 1px solid #e0e0e0;
-  margin: 0 -30px;
   padding: 20px 30px;
+  display: flex;
+}
+
+.solicitude-right {
+  align-self: center;
+  margin-left: 10px;
+}
+
+.solicitude-title {
+  text-align: left;
+  margin-bottom: 10px;
+}
+
+.solicitude-right h3 {
+  margin-bottom: 10px;
+}
+
+.solicitude-right p {
+  margin-bottom: 10px;
 }
 
 .image__solicitude {
@@ -16,4 +34,11 @@
   height: 7vw;
   object-fit: cover;
   margin-right: 5px;
+}
+
+.pilot-list-container {
+  width: 45%;
+  height: 300px;
+  border: 1px solid red;
+  margin: 10px;
 }
