--- a/src/Components/UserForm.css
+++ b/src/Components/UserForm.css
@@ -110,7 +110,7 @@ progress{
   box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
 }
 
-select{
+.input-container select{
   height: 2rem;
 }
 .custom-file-upload {
