--- a/src/Components/SelectorDP.css
+++ b/src/Components/SelectorDP.css
@@ -1,8 +1,10 @@
 .SecondaryContainer {
   display: flex;
   justify-content: space-around;
-  box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.2);
-  padding: 40px 0px;
+  box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.4);
+  padding: 20px 0px;
+  opacity: 0.9;
+  background-color: #F6F6F6;
 }
 
 .LateralContainer {
@@ -10,6 +12,7 @@
   box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.2);
   padding-left: 2rem;
   padding-right: 1rem;
+  background-color: #E1E4EE;
 }
 
 .Indicador{
@@ -58,14 +61,15 @@
 
 .ComponentBodyContainer {
   width: 60%;
-  padding: 4rem 0rem;
+  padding: 2rem 0rem;
   box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.2);
   display: flex;
   justify-content: center;
+  background-color: #E1E4EE;
 }
 
 .component-pilot{
-  width: 80%;
+  width: 90%;
   text-align: center;
   }
 
@@ -76,7 +80,7 @@
 }
 
 .TabsContainer button {
-  background-color: white;
+  background-color: #E1E4EE;
   border: none;
   color: black;
   padding: 1rem;
