fix bug modal and login  z-index

--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -15,6 +15,10 @@
   text-align: justify;
 }
 
+.dropdown{
+  z-index:20;
+}
+
 .react-chatbot-kit-user-chat-message{
   font-size: 1.2rem;
   background: #e3e8ed;
