fix bug certificate visual element

--- a/src/Components/Services.css
+++ b/src/Components/Services.css
@@ -19,7 +19,7 @@
   box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
 }
 
-.element{
+.ServicesContainer element{
   font-size: 1.3rem;
   font-style: italic;
   text-align: center;
