update background-image-> better resolution

--- a/src/Pages/DronePilot.css
+++ b/src/Pages/DronePilot.css
@@ -1,5 +1,6 @@
 .MainDronePilotContainer{
-  background-image: url("https://i.blogs.es/85175c/mavic-2-enterprise-7/1366_2000.jpg");
+  background-image: url("https://i.pinimg.com/originals/16/4c/ab/164cab5d130f1df1a1b138fd9ab2d1e3.jpg");
+  
 }
 
 .subContainer {
