--- a/src/Components/Certificates.css
+++ b/src/Components/Certificates.css
@@ -83,3 +83,71 @@
   height: 5rem;
   border-radius: 1rem;
 }
+
+.add-certificate{
+  background-color: white;
+  border: none;
+  font-size: 1.6rem;
+  color: rgba(10,10,200, 1);
+  margin: 1rem 0rem 2rem 0rem;
+}
+
+.certificateformcontainer {
+  box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
+  padding: 2rem 3rem;
+  margin-bottom: 4rem;
+}
+
+.certificateformfieldset {
+  border: none;
+  padding: 0.7rem 0rem;
+}
+
+.certificateinput-full-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 0.4rem;
+}
+.certificatetitleform {
+  text-align: left;
+  font-size: 1.8rem;
+  padding: 1rem 0rem;
+}
+
+.certificateformlabel {
+  font-size: 1.4rem;
+}
+
+.formbuttoncertificate {
+  text-decoration: none;
+  margin: 2rem 0rem 0rem 1rem;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  font-family: 'Montserrat';
+  font-size: 1.6rem;
+  color: white;
+  border: none;
+  background-image: linear-gradient(to left, rgba(10,10,200, 1), rgba(10,100,200, 1));
+  cursor: pointer;
+}
+
+.formbuttoncertificate:hover {
+  background-image: linear-gradient(to left, rgba(10,10,100, 1), rgba(10,10,100, 1));
+}
+
+.certificate-input-title{
+  width: 60%;
+  height: 1.8rem;
+  padding-left: 0.2rem;
+}
+
+.certificateformlabel {
+  width: 40%;
+  text-align: left;
+}
+
+.error-input-container-certificate{
+  display: flex;
+  justify-content: flex-end;
+}
