--- a/src/Components/FileButton.css
+++ b/src/Components/FileButton.css
@@ -1,15 +1,10 @@
 .fullcontaineruploadimage{
+  width:100%;
   height: 2rem;
   display: flex;
   flex-direction: row;
   border-right: 1px solid gray;
   box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
-}
-
-.boxlabelnameimage {
-  width: 80%;
-  background-color: white;
-  border: 1px solid gray;
 }
 
 .labelnameimage {
@@ -18,12 +13,6 @@
   justify-content: left;
   align-items: center;
   padding-left: 0.5rem;
-}
-
-.boxbuttonsimage{
-  width: 20%;
-  display: flex;
-  flex-direction: row;
 }
 
 .inputfile{
@@ -35,7 +24,46 @@
   z-index: -1;
 }
 
-.labelbuttonadddocument{
+.boxlabelnameimage1 {
+  width: 90%;
+  background-color: white;
+  border: 1px solid gray;
+}
+
+.boxlabelnameimage2 {
+  width: 80%;
+  background-color: white;
+  border: 1px solid gray;
+}
+
+.boxbuttonsimage1 {
+  width: 10%;
+  display: flex;
+}
+
+.boxbuttonsimage2 {
+  width: 20%;
+  display: flex;
+  flex-direction: row;
+}
+
+.labelbuttonadddocument1{
+  display: flex;
+  width: 100%;
+  right: 0px;
+  padding: 0.2rem 0rem 0.2rem 0rem;
+  font-size: 1rem;
+  font-weight: 500;
+  color: black;
+  justify-content: center;
+  text-align: center;
+  border: 1px solid gray;
+  border-right: 0px;
+  border-left: 0px;
+  background-color: #D9DFEE;
+}
+
+.labelbuttonadddocument2{
   display: flex;
   width: 50%;
   left: 0px;
