--- a/src/Components/Certificates.css
+++ b/src/Components/Certificates.css
@@ -85,7 +85,7 @@
 }
 
 .add-certificate{
-  background-color: white;
+  background-color: transparent;
   border: none;
   font-size: 1.6rem;
   color: rgba(10,10,200, 1);
