--- a/src/Components/Equipments.css
+++ b/src/Components/Equipments.css
@@ -225,3 +225,16 @@
 .titleequipments {
     font-size: 2rem;
 }
+
+.mainimagecontainer {
+  width: 100%;
+  text-align:center;
+  padding-top: 3rem;
+}
+
+.mainimage{
+  width: 12rem;
+  height: 12rem;
+  border-radius: 3rem;
+  filter: grayscale(100%);
+}
