--- a/src/Components/Results.css
+++ b/src/Components/Results.css
@@ -1,5 +1,7 @@
+
 .solicitude {
   width: 100%;
+  min-height: 200px;
   border-bottom: 1px solid #e0e0e0;
   padding: 20px 30px;
   display: flex;
@@ -28,6 +30,11 @@
   height: 200px;
   object-fit: cover;
   margin-right: 5px;
+}
+
+.image__container__solicitude{
+  display: flex;
+  align-items: center;
 }
 
 .image__solicitude__clientProfile {
