--- a/src/Components/PilotCard.css
+++ b/src/Components/PilotCard.css
@@ -8,6 +8,42 @@
   box-sizing: border-box;
 }
 
+.pilotcard-selector {
+  display: flex;
+  justify-content: space-evenly;
+  background-color: #e1e4ee;
+  cursor: pointer;
+}
+
+.tag-selector {
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  margin: 0 2px;
+  background-color: #b3c3ff;
+  color: white;
+  border-radius: 0 0 5px 5px;
+  cursor: pointer;
+}
+
+.tag-selector:hover {
+  background-color: #7e9aff;
+}
+
+.tag-selector-selected {
+  color: white;
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  margin: 0 2px;
+  background-color: rgb(0, 23, 105);
+  border-radius: 0 0 5px 5px;
+}
+
+.pilotcard-selector img {
+  width: 50px;
+}
+
 @media (min-width: 600px) {
   .pilotcard-container {
     width: 500px;
@@ -23,7 +59,7 @@
 
 .pilotcard-photo {
   object-fit: cover;
-  width: 100%;
+  width: 80%;
   max-height: 600px;
   margin-right: 10px;
   transition: transform 450ms;
@@ -54,6 +90,7 @@
 
 .pilotcard-description {
   padding: 20px;
+  background-color: #e1e4ee;
 }
 
 .pilotcard-description h1 {
