--- a/src/Components/Results.css
+++ b/src/Components/Results.css
@@ -5,6 +5,7 @@
   border-bottom: 1px solid #e0e0e0;
   padding: 20px 30px;
   display: flex;
+  font-size: 125%;
 }
 
 .solicitude-right {
@@ -15,10 +16,12 @@
 .solicitude-title {
   text-align: left;
   margin-bottom: 10px;
+  vertical-align: top;
 }
 
 .solicitude-right h3 {
   margin-bottom: 10px;
+  top: 0;
 }
 
 .solicitude-right p {
@@ -49,4 +52,21 @@
   height: 300px;
   border: 1px solid red;
   margin: 10px;
+}
+
+.solicitude-contact-info {
+  list-style: none;
+  align-content: center;
+}
+
+.solicitude-contact-info li {
+  align-content: center;
+  vertical-align: middle;
+}
+
+.solicitude-contact-info li img{
+  width: 1.5vw;
+  height:1.5vw;
+  vertical-align: middle;
+  margin: 5px 10px 10px 0px;
 }
