--- a/src/Components/SolicitudeCard.css
+++ b/src/Components/SolicitudeCard.css
@@ -1,27 +1,25 @@
-.pilotcard-container {
-  /* position: fixed;
-  z-index: 500; */
-  background-color: white;
+.solicitude-card-container {
+  background-color: #e1e4ee;
   width: 70%;
   box-shadow: 1px 1px 1px black;
-
   box-sizing: border-box;
+  min-height: 400px;
 }
 
 @media (min-width: 600px) {
-  .pilotcard-container {
+  .solicitude-card-container {
     width: 500px;
     left: calc(50% - 250px);
   }
 }
 
-.pilotcard-photos {
+.solicitude-card-photos {
   display: flex;
   overflow-y: hidden;
   overflow-x: scroll;
 }
 
-.pilotcard-photo {
+.solicitude-card-photo {
   object-fit: cover;
   width: 100%;
   max-height: 600px;
@@ -29,37 +27,20 @@
   transition: transform 450ms;
 }
 
-.pilotcard-photos::-webkit-scrollbar {
+.solicitude-card-photos::-webkit-scrollbar {
   display: none;
 }
 
-.buttons button {
-  background: rgb(179, 195, 255);
-  padding: 10px;
-  display: inline-block;
-  outline: 0;
-  border: 0;
-  margin: -1px;
-  border-radius: 2px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  color: #f5f5f5;
-  cursor: pointer;
+.solicitude-card-description {
+  padding: 10px 20px 20px 20px;
+  font-size: 125%;
 }
 
-.buttons button:hover {
-  background: rgb(0, 23, 105);
-  transition: all 0.4s ease-in-out;
-}
-
-.pilotcard-description {
-  padding: 20px;
-}
-
-.pilotcard-description h1 {
+.solicitude-card-description h1 {
+  vertical-align: top;
   margin-bottom: 5px;
 }
 
-.pilotcard-description p {
+.solicitude-card-description p {
   margin-bottom: 5px;
 }
