remove progress bar profile pilot and fix bug background color in other component

--- a/src/Components/FileForm.css
+++ b/src/Components/FileForm.css
@@ -1,5 +1,5 @@
 .add-document{
-  background-color: white;
+  background-color: transparent;
   border: none;
   font-size: 1.6rem;
   color: rgba(10,10,200, 1);
