--- a/src/Components/PilotCard.css
+++ b/src/Components/PilotCard.css
@@ -44,6 +44,11 @@
   width: 50px;
 }
 
+.equipment-wrap{
+  display: flex;
+  flex-wrap: wrap;
+}
+
 @media (min-width: 600px) {
   .pilotcard-container {
     width: 500px;
@@ -99,4 +104,59 @@
 
 .pilotcard-description p {
   margin-bottom: 5px;
+}
+
+.certificate{
+  width: 70%;
+  height: 3.5rem;
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(0, 23, 105);
+  box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
+  color: black;
+  border-radius: 2rem;
+  align-items: center;
+  margin-bottom: 2rem;}
+
+.element{
+  background: none;
+  width: 80%;
+  padding: 1rem 1rem 1rem 1.5rem;
+  font-size: 1.4rem;;
+  text-align: left;
+  font-style: italic;
+  color: white;
+}
+
+.icon{
+  width: 1.5rem;
+  height: 1.5rem;
+  filter: invert(1);
+}
+.url{
+ margin-right: 1.5rem;
+}
+
+.certificate-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 20px;
+}
+
+.services-wrap{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.services-wrap p{
+  background: none;
+  width: 80%;
+  padding: 1rem 1rem 1rem 1.5rem;
+  font-size: 1.4rem;;
+  text-align: left;
+  font-style: italic;
+  color: black;
 }
