--- a/src/Components/PilotCard.css
+++ b/src/Components/PilotCard.css
@@ -8,6 +8,47 @@
   box-sizing: border-box;
 }
 
+.pilotcard-selector {
+  display: flex;
+  justify-content: space-evenly;
+  background-color: #e1e4ee;
+  cursor: pointer;
+}
+
+.tag-selector {
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  margin: 0 2px;
+  background-color: #b3c3ff;
+  color: white;
+  border-radius: 0 0 5px 5px;
+  cursor: pointer;
+}
+
+.tag-selector:hover {
+  background-color: #7e9aff;
+}
+
+.tag-selector-selected {
+  color: white;
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  margin: 0 2px;
+  background-color: rgb(0, 23, 105);
+  border-radius: 0 0 5px 5px;
+}
+
+.pilotcard-selector img {
+  width: 50px;
+}
+
+.equipment-wrap{
+  display: flex;
+  flex-wrap: wrap;
+}
+
 @media (min-width: 600px) {
   .pilotcard-container {
     width: 500px;
@@ -23,7 +64,7 @@
 
 .pilotcard-photo {
   object-fit: cover;
-  width: 100%;
+  width: 80%;
   max-height: 600px;
   margin-right: 10px;
   transition: transform 450ms;
@@ -54,6 +95,7 @@
 
 .pilotcard-description {
   padding: 20px;
+  background-color: #e1e4ee;
 }
 
 .pilotcard-description h1 {
@@ -62,4 +104,59 @@
 
 .pilotcard-description p {
   margin-bottom: 5px;
+}
+
+.certificate{
+  width: 70%;
+  height: 3.5rem;
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(0, 23, 105);
+  box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
+  color: black;
+  border-radius: 2rem;
+  align-items: center;
+  margin-bottom: 2rem;}
+
+.element{
+  background: none;
+  width: 80%;
+  padding: 1rem 1rem 1rem 1.5rem;
+  font-size: 1.4rem;;
+  text-align: left;
+  font-style: italic;
+  color: white;
+}
+
+.icon{
+  width: 1.5rem;
+  height: 1.5rem;
+  filter: invert(1);
+}
+.url{
+ margin-right: 1.5rem;
+}
+
+.certificate-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 20px;
+}
+
+.services-wrap{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.services-wrap p{
+  background: none;
+  width: 80%;
+  padding: 1rem 1rem 1rem 1.5rem;
+  font-size: 1.4rem;;
+  text-align: left;
+  font-style: italic;
+  color: black;
 }
